<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
      android:id="@+id/section_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textColor="@color/blue_section_title"
      android:textSize="20sp"
      android:text="@string/section_systems_of_linear_equations"
      android:textStyle="bold" />
    
    <TextView
      android:id="@+id/method_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_activity_gaussian_elimination"
      android:textColor="@color/gray_method_title"
      android:textSize="17sp" />
    
    <LinearLayout
        android:id="@+id/unknowns_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        
        <EditText
            android:id="@+id/number_of_unkwnowns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_number_unknowns"
            android:layout_margin="15dp"
            android:inputType="number"
            android:ems="10" >
          <requestFocus />
      </EditText>
      
      <Button
            android:id="@+id/continue_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_continue_button"
            android:onClick="continueToMethods"/>
      
    </LinearLayout>
</LinearLayout>
