<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/section_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/section_interpolation"
            android:textColor="@color/blue_section_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/points_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:textColor="@color/black_input_header" >

            <TextView
                android:id="@+id/input_points_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/text_input_points"
                android:textColor="@color/black_input_header"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/horizontal_scroll_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TableLayout
                        android:id="@+id/input_points_table"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" >
                    </TableLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <TextView
            android:id="@+id/value_to_evaluate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_input_value_to_evaluate"
            android:textColor="@color/black_input_header"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/value_to_evaluate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/text_hint_enter_value_to_evaluate"
            android:inputType="numberSigned|numberDecimal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/text_select_a_method"
            android:textColor="@color/black_input_header"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/method_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10" />

        <LinearLayout
            android:id="@+id/calculate_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center" >

            <Button
                android:id="@+id/calculate_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculate"
                android:text="@string/text_calculate_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>